# effective_mobile

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  run.sh
app/: config.py  database.py  dependencies.py  main.py  seed.py
app/api/v1/: admin.py  auth.py  mock_resources.py
app/migration/: env.py
app/migration/versions/: 464eb4a6eb01_initial_tables.py  7d68eab9d98a_init_tables.py  da84443beab8_initial_tables.py
app/models/: __init__.py  access_rule.py  business_element.py  role.py  session.py  user.py
app/repositories/: access_rule_repo.py  base_repo.py  business_element_repo.py  role_repo.py  session_repo.py  user_repo.py
app/schemas/: access_rule_schemas.py  auth_schemas.py
app/services/: access_service.py  auth_service.py  user_management_service.py
app/utils/: jwt.py  password.py
tests/: conftest.py
tests/integration/: test_access_control.py  test_access_rule_repo.py  test_admin_endpoints.py  test_auth_endpoints.py  test_role_repo.py  test_session_repo.py  test_user_managment_endpoints.py  test_user_repo.py
tests/unit/: test_access_service.py  test_auth_service.py  test_dependencies.py  test_jwt_utils.py  test_password_utils.py  test_user_managment_service.py
